tests/snapshot/error/stack_trace/non_error/error_like_name_only.js
class MyError {
  constructor() {
    this.name = "MyCustomError";
  }
}

1;
throw new MyError();
2;